--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "howler": "^1.1.25",
     "keyboardjs": "^0.4.2",
+    "localforage": "^1.1.1",
     "numeral": "^1.5.3",
     "pixi.js": "^2.1.1",
     "raf": "^2.0.4",
