--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
     "pixi.js": "^2.1.1",
     "raf": "^2.0.4",
     "victor": "^0.2.6"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-jscs": "^1.3.1",
+    "gulp-jshint": "^1.9.0",
+    "jshint-stylish": "^1.0.0"
   }
 }
