--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "homepage": "https://github.com/kchapelier/ludumdare31",
   "dependencies": {
     "howler": "^1.1.25",
-    "keyboardjs": "^0.4.2",
     "localforage": "^1.1.1",
     "numeral": "^1.5.3",
     "perlin": "^1.0.0",
     "pixi.js": "^2.1.1",
     "raf": "^2.0.4",
-    "victor": "^0.2.6"
+    "victor": "^0.2.6",
+    "vkey": "^1.0.0"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
