externalized input to migl-input

--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "howler": "^1.1.25",
     "localforage": "^1.1.1",
     "migl-gameloop": "^1.0.0",
+    "migl-input": "^1.0.0",
     "numeral": "^1.5.3",
     "perlin": "^1.0.0",
     "pixi.js": "^2.1.1",
-    "raf": "^2.0.4",
-    "victor": "^0.2.6",
-    "vkey": "^1.0.0"
+    "victor": "^0.2.6"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
